Correctifs de la page Logement, des composants Logement et Collapse

--- a/kasa/src/components/Collapse/Collapse.scss
+++ b/kasa/src/components/Collapse/Collapse.scss
@@ -40,7 +40,7 @@
     margin: 0px 0 20px 0;
   }
 
-  &_up {
+  &_down {
     transform: rotate(0.5turn);
   }
   &_up,
